@@ -90,14 +90,13 @@ our %S = (%S,
     [ 'Sequel',              0 ],
     [ 'Prequel',             1 ],
     [ 'Same setting',        0 ],
-    [ 'Alternative setting', 0 ],
     [ 'Alternative version', 0 ],
-    [ 'Same characters',     0 ],
+    [ 'Shares characters',   0 ],
     [ 'Side story',          0 ],
     [ 'Parent story',        1 ],
-    [ 'Summary',             0 ],
-    [ 'Full story',          1 ],
-    [ 'Other',               0 ],
+    [ 'Same series',         0 ],
+    [ 'Fandisc',             0 ],
+    [ 'Original game',       1 ],
   ],
   age_ratings     => {
     -1 => [ 'Unknown' ],
