@@ -3,6 +3,11 @@ git - ?
 	- Blacklist a users' votes from the VN vote statistics
 	- usermods can browse a users' votes and list even when they are hidden
 	- More sensible placing of the submit button on /v+/tagmod
+	- Improved VN relations:
+	  - Removed: summary, full story
+	  - Added: same series, fandisc, original game
+	  - Renamed: same characters to shares characters
+	  - Merged: alternative setting into alternative version, and other into same series
 
 2.6 - 2009-08-09
 	- New screen resolutions: 1024x600 and 1600x1200
